force-app/main/default/objects/Timeline_Era__c/Timeline_Era__c.object-meta.xml
<CustomObject>
    <label>Timeline Era</label>
    <nameField>
        <displayFormat>TLE-{0000}</displayFormat>
        <label>Timeline Era Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Eras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>