force-app/main/default/objects/Timeline_Era__c/fields/End_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Year__c</fullName>
    <label>End Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>