force-app/main/default/objects/Timeline_Era__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <label>Start Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>