force-app/main/default/objects/Timeline_Era__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <referenceTo>Timeline__c</referenceTo>
    <relationshipLabel>Timeline Eras</relationshipLabel>
    <relationshipName>Timeline_Eras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>