force-app/main/default/objects/Timeline_Era__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>500</length>
    <type>Html</type>
</CustomField>